--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,43 +1,11 @@
-* {
-  box-sizing: border-box;
-}
-
-body {
-  background: #92bde7;
-  color: #485e74;
-  line-height: 1.6;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  padding: 1em;
-}
-
-.form-container {
-  max-width: 1170px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 1em;
+.content {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  border: 5px solid yellowgreen;
 }
-
-.form-company-info ul {
-  list-style: none;
-  padding: 0;
+.routes-container {
+  margin-top: 100px;
 }
-
-.form-brand {
-  text-align: center;
-}
-
-.form-wrapper {
-  box-shadow: 0 0 20px 0 rgba(72, 94, 116, 0.7);
-}
-
-.form-wrapper > * {
-  padding: 1em;
-}
-
 .navbar {
   position: fixed;
   top: 0;
@@ -86,25 +54,21 @@ body {
   height: 100px;
 }
 
-// CONTACT-comments FORM
-
-.form {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.form-input {
-  display: flex;
-  flex-direction: column;
-}
-
-.form-input label {
-  border: 2px solid rgb(212, 20, 20);
-}
-
 // CONTACT FORM
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-form-input {
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-form-input label {
+  border: 1px solid rgb(212, 20, 20);
+}
 
 @media all and (max-width: 1000px) {
   .nav-links {
