--- a/src/App.scss
+++ b/src/App.scss
@@ -26,6 +26,20 @@ body {
   padding: 0;
 }
 
+.form-company-info {
+  background: #c9e6ff;
+}
+
+.form-company-info h3,
+ul {
+  text-align: center;
+  margin: 0 0 1rem 0;
+}
+
+.form-contact {
+  background: #f9feff;
+}
+
 .form-brand {
   text-align: center;
 }
@@ -38,6 +52,20 @@ body {
   padding: 1em;
 }
 
+.form-contact-input {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+}
+
+.form-contact-input label {
+  display: block;
+}
+
+.form-contact-input p {
+  margin: 0;
+}
+//NAVIGATOR
 .navbar {
   position: fixed;
   top: 0;
@@ -49,6 +77,32 @@ body {
 .nav-header {
   display: flex;
   justify-content: space-between;
+}
+
+.form-contact-input .full {
+  grid-column: 1/3;
+}
+
+.form-contact-input input,
+.form-contact-input button,
+.form-contact-input textarea {
+  width: 100%;
+  padding: 1em;
+  border: 1px solid #c9e6ff;
+}
+
+.form-contact-input button {
+  background: #c9e6ff;
+  border: 0;
+  text-transform: uppercase;
+}
+
+.form-contact-input button:hover,
+.form-contact-input button:focus {
+  background: #92bde7;
+  color: #f9feff;
+  outline: 0;
+  transition: background-color 2s ease-out;
 }
 
 .nav-links {
@@ -79,7 +133,9 @@ body {
 }
 .nav-links a:hover {
   color: var(--primaryColor);
-  background: rgba(238, 13, 13, 0.75);
+  background: #c9e6ff;
+  transition: background-color 1s ease-out;
+  color: #f9feff;
 }
 
 .show-nav {
@@ -87,22 +143,6 @@ body {
 }
 
 // CONTACT-comments FORM
-
-.form {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.form-input {
-  display: flex;
-  flex-direction: column;
-}
-
-.form-input label {
-  border: 2px solid rgb(212, 20, 20);
-}
 
 // CONTACT FORM
 
