--- a/src/pages/works.scss
+++ b/src/pages/works.scss
@@ -19,41 +19,66 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-h1, h2, h3, h4, h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
   font-weight: 800;
 }
 
-ul, ol {
+ul,
+ol {
   padding-left: 40px;
 }
 
-h1 {font-size: 1.9em; }
-h2 { font-size: 1.7em; }
-h3 { font-size: 1.5em; }
+h1 {
+  font-size: 1.9em;
+}
+h2 {
+  font-size: 1.7em;
+}
+h3 {
+  font-size: 1.5em;
+}
 
-h1, h2, h3, h4, h5, h6, p, ul, ol, .featuredImage { margin-bottom: 20px; }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+ol,
+.featuredImage {
+  margin-bottom: 20px;
+}
 
-li { margin-bottom: 10px;}
+li {
+  margin-bottom: 10px;
+}
 
 .container {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 header {
   height: 60px;
   line-height: 60px;
-  background: #1b93d7;
+  background: #c9e6ff;
   text-align: center;
-  color: #fff;
+  color: rgba(0, 0, 0, 0.55);
+  box-shadow: 0 0 10px 0 rgba(72, 94, 116, 0.7);
 }
 
 .wrapper {
-    width: 100%;
-    max-width: 900px;
-    padding: 0 10px;
-    margin: auto;
+  width: 100%;
+  max-width: 900px;
+  padding: 0 10px;
+  margin: auto;
 }
 
 .logo {
@@ -70,17 +95,17 @@ main .wrapper {
   padding: 20px;
   margin-bottom: 50px;
   background-color: #fff;
-  box-shadow: 0px 2px 3px rgba(0,0,0,.13) ,1px 2px 2px rgba(0,0,0,.1) , -1px -2px 2px rgba(0,0,0,.05) ;
+  box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.13), 1px 2px 2px rgba(0, 0, 0, 0.1),
+    -1px -2px 2px rgba(0, 0, 0, 0.05);
 }
 
 .post img {
-      display: block;
-      width: 100%;
+  display: block;
+  width: 100%;
 }
 
 .title {
   text-transform: uppercase;
   text-align: center;
   font-size: 1.8em;
-  color: #1b93d7;
 }
