--- a/src/pages/works.scss
+++ b/src/pages/works.scss
@@ -11,7 +11,7 @@ body {
   line-height: 1.5;
   font-family: "Muli", sans-serif;
   background-image: url(../images/bg.png);
-  background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
   background-position: 0 0;
   background-attachment: fixed;
@@ -66,18 +66,24 @@ li {
 }
 
 header {
-  height: 60px;
-  line-height: 60px;
-  background: #c9e6ff;
+  // height: 60px;
+  // line-height: 60px;
   text-align: center;
-  color: rgba(0, 0, 0, 0.55);
-  box-shadow: 0 0 10px 0 rgba(72, 94, 116, 0.7);
+  // color: rgba(0, 0, 0, 0.55);
+  // box-shadow: 0 0 10px 0 rgba(72, 94, 116, 0.7);
+  background-color: #c9e6ff;
+  box-shadow: 0 0 20px 0 rgba(72, 94, 116, 0.7);
+  display: grid;
+  place-items: center;
+  align-items: center;
+  margin: 1em;
+  margin-bottom: 20px;
 }
 
 .wrapper {
   width: 100%;
   max-width: 900px;
-  padding: 0 10px;
+  padding: 10px;
   margin: auto;
 }
 
