--- a/src/pages/works.scss
+++ b/src/pages/works.scss
@@ -6,8 +6,6 @@
   padding: 0;
 }
 
-
-
 h1,
 h2,
 h3,
@@ -60,8 +58,8 @@ header {
   text-align: center;
   // color: rgba(0, 0, 0, 0.55);
   // box-shadow: 0 0 10px 0 rgba(72, 94, 116, 0.7);
-  background-color:  #db8b13;
-  box-shadow: 0 0 20px 0 rgba(72, 94, 116, 0.7);
+  background-color: #c76e32;
+  box-shadow: 0 0 20px 0 #1f0704;
   display: grid;
   place-items: center;
   align-items: center;
@@ -69,7 +67,7 @@ header {
   margin-bottom: 20px;
 }
 
-.wrapper {
+.logo-wrapper {
   width: 100%;
   max-width: 900px;
   padding: 10px;
@@ -78,8 +76,9 @@ header {
 
 .logo {
   line-height: 60px;
-  font-size: 27px;
-  font-weight: 600;
+  font-size: 34px;
+  font-weight: 700;
+  color: #1f0704;
 }
 
 main .wrapper {
@@ -90,8 +89,7 @@ main .wrapper {
   padding: 20px;
   margin-bottom: 50px;
   background-color: #fff;
-  box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.13), 1px 2px 2px rgba(0, 0, 0, 0.1),
-    -1px -2px 2px rgba(0, 0, 0, 0.05);
+  box-shadow: 0px 2px 3px #1f0704, 1px 2px 2px #1f0704, -1px -2px 2px #1f0704;
 }
 
 .post img {
