comments-background styling

--- a/src/App.scss
+++ b/src/App.scss
@@ -21,6 +21,10 @@
 
 .form-company-info {
   //background: #c76e32;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
 }
 
 .form-company-info h3,
