--- a/src/pages/works.scss
+++ b/src/pages/works.scss
@@ -88,8 +88,8 @@ main .wrapper {
 .post {
   padding: 20px;
   margin-bottom: 50px;
-  background-color: #fff;
-  box-shadow: 0px 2px 3px #1f0704, 1px 2px 2px #1f0704, -1px -2px 2px #1f0704;
+  background-color: #a87c60;
+  box-shadow: 10px 20px 20px 10px #1f0704;
 }
 
 .post img {
