--- a/src/App.scss
+++ b/src/App.scss
@@ -134,6 +134,7 @@ ul,
 @media all and (max-width: 1000px) {
   .nav-links {
     flex-wrap: wrap;
+    
   }
 
   .nav-links li {
@@ -144,6 +145,27 @@ ul,
 @media all and (max-width: 480px) {
   .nav-links li {
     flex-basis: 100%;
+  }
+  .home-wrapper {
+    //YAZ
+    background-image: url(./images/home.jpeg);
+  }
+  .home-wrapper img {
+    display: none;
+  }
+  .home-introduction {
+    display: grid;
+  }
+}
+@media all and (max-width: 1000px) {
+  .nav-links li {
+    flex-basis: 100%;
+  }
+  .home-wrapper {
+    //YAZ
+  }
+  .home-wrapper img {
+    display: none;
   }
 }
 //FORM
@@ -180,7 +202,7 @@ ul,
 }
 
 .navbar {
-  background-color: #c76e32;
+  background-color: #1f0704;
   box-shadow: 1px 0 20px 0 #1f0704;
   display: grid;
   place-items: center;
@@ -205,10 +227,8 @@ body {
 
 .nav-link {
   font-size: x-large;
-  color: #1f0704;
   line-height: 80px;
-  font-size: 24px;
-  font-weight: 1000;
+  font-size: 22px;
 }
 
 .errors-input {
@@ -241,6 +261,7 @@ body {
 .datepicker-container {
   display: flex;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
 }
 .datepicker {
