--- a/src/App.scss
+++ b/src/App.scss
@@ -44,7 +44,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: rgb(5, 2, 19);
+  color: rgba(255, 255, 255, 0.55);
   font-weight: 1000;
   font-size: 24px;
   padding: 50px;
@@ -57,7 +57,7 @@ ul,
   line-height: 40px;
   font-size: 30px;
   font-weight: 900;
-  color: #1f0704;
+  color: rgba(255, 255, 255, 0.55);
 }
 
 .form-contact {
