--- a/src/pages/works.scss
+++ b/src/pages/works.scss
@@ -86,7 +86,14 @@ main .wrapper {
   padding: 50px 15px;
 }
 
+.post-container {
+  display: flex;
+  flex-wrap: wrap;
+}
 .post {
+  flex-grow: 1;
+  width: 50%;
+  height: auto;
   padding: 20px;
   margin-bottom: 50px;
   background-color: #a87c60;
