--- a/src/pages/works.scss
+++ b/src/pages/works.scss
@@ -60,17 +60,15 @@ header {
   // box-shadow: 0 0 10px 0 rgba(72, 94, 116, 0.7);
   background-color: #1f0704;
   box-shadow: 0 0 20px 0 #1f0704;
-  display: grid;
+  //display: grid;
   place-items: center;
   align-items: center;
   padding: 8px 0px;
-  margin: 20px;
-  //width: 98%;
+  margin: 150px;
 }
 
 .logo-wrapper {
   width: 100%;
-  max-width: 900px;
   padding: 10px;
   margin: auto;
 }
