admin auth (with context) completed

--- a/src/App.scss
+++ b/src/App.scss
@@ -286,3 +286,9 @@ body {
   justify-content: center;
   align-items: center;
 }
+.admin-login {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  margin: 500px;
+}
