styling of the form in booking and unused code removed

--- a/src/App.scss
+++ b/src/App.scss
@@ -63,6 +63,10 @@ ul,
 
 .form-contact {
   //background: #a87c60;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
 }
 .home-photo {
   //background: #a87c60;
