--- a/src/pages/works.scss
+++ b/src/pages/works.scss
@@ -4,7 +4,6 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  
 }
 
 h1,
@@ -47,18 +46,19 @@ li {
   margin-bottom: 10px;
 }
 
-.container {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
+// .container {
+//   display: flex;
+//   flex-direction: column;
+//   min-height: 100vh;
+// }
 
 header {
   // height: 60px;
   // line-height: 60px;
   text-align: center;
+  border-radius: 18px;
   // color: rgba(0, 0, 0, 0.55);
-  // box-shadow: 0 0 10px 0 rgba(72, 94, 116, 0.7);
+  //box-shadow: 0 0 10px 0 rgba(72, 94, 116, 0.7);
   background-color: #1f0704;
   box-shadow: 0 0 20px 0 #1f0704;
   //display: grid;
@@ -66,12 +66,6 @@ header {
   align-items: center;
   padding: 8px 0px;
   margin: 150px;
-}
-
-.logo-wrapper {
-  padding: 10px;
-  margin: auto;
-  border-radius: 3px;
 }
 
 .logo {
