--- a/src/pages/works.scss
+++ b/src/pages/works.scss
@@ -52,21 +52,21 @@ li {
 //   min-height: 100vh;
 // }
 
-header {
-  // height: 60px;
-  // line-height: 60px;
-  text-align: center;
-  border-radius: 18px;
-  // color: rgba(0, 0, 0, 0.55);
-  //box-shadow: 0 0 10px 0 rgba(72, 94, 116, 0.7);
-  background-color: #1f0704;
-  box-shadow: 0 0 20px 0 #1f0704;
-  //display: grid;
-  place-items: center;
-  align-items: center;
-  padding: 8px 0px;
-  margin: 150px;
-}
+// header {
+//   // height: 60px;
+//   // line-height: 60px;
+//   text-align: center;
+//   border-radius: 18px;
+//   // color: rgba(0, 0, 0, 0.55);
+//   //box-shadow: 0 0 10px 0 rgba(72, 94, 116, 0.7);
+//   background-color: #1f0704;
+//   box-shadow: 0 0 20px 0 #1f0704;
+//   //display: grid;
+//   place-items: center;
+//   align-items: center;
+//   padding: 8px 0px;
+//   margin: 150px;
+// }
 
 
 
