admin login syling

--- a/src/App.scss
+++ b/src/App.scss
@@ -407,3 +407,100 @@ body {
   color: aliceblue;
   padding-bottom: 32px;
 }
+.container-login {
+  max-width: 440px;
+  padding: 0 20px;
+  margin: 170px auto;
+}
+
+.wrapper-login {
+  width: 100%;
+  background: #fff;
+  border-radius: 5px;
+  box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.1);
+}
+
+.container-title {
+  height: 90px;
+  background: #c76e32;
+  border-radius: 5px 5px 0 0;
+  color: #fff;
+  font-size: 30px;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+.container-row {
+  height: 45px;
+  margin-bottom: 15px;
+  position: relative;
+}
+.container-row input {
+  height: 100%;
+  width: 100%;
+  outline: none;
+  padding-left: 60px;
+  border-radius: 5px;
+  border: 1px solid lightgrey;
+  font-size: 16px;
+  transition: all 0.3s ease;
+  
+}
+.container-row input:focus {
+  border-color: #c76e32;
+  box-shadow: inset 0px 0px 2px 2px rgba(26, 188, 156, 0.25);
+}
+.container-row i {
+  position: absolute;
+  width: 47px;
+  height: 100%;
+  color: #fff;
+  font-size: 18px;
+  background: #c76e32;
+  border: 1px solid #c76e32;
+  border-radius: 5px 0 0 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.login-button input:hover{
+  background: #c76e32;
+}
+
+.login-button {
+  font-size: 20px;
+  font-weight: 500;
+  padding-left: 0px;
+  background: #c76e32;
+  border: 1px solid #c76e32;
+  text-align: center;
+  margin-top: 20px;
+  font-size: 17px;
+}
+
+.login-button button{
+  color: #1f0704;
+  background: #c76e32;
+  border: 1px solid #c76e32;
+  text-align: center;
+  margin-top: 20px;
+  font-size: 17px;
+}
+
+.logged-in {
+  height: 45px;
+  background: #c76e32;
+  border-radius: 5px 5px 0 0;
+  color: #fff;
+  font-size: 15px;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  margin-top: 10px;
+}
